--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,11 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="../static/styles/styles.css">
-  <link rel="stylesheet" href="checkbox.css">
+  <!--<link rel="stylesheet" href="../static/styles/styles.css"> -->
+  <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
+  <!--<link rel="stylesheet" href="checkbox.css"> -->
+  <link rel="stylesheet" href="{% static 'styles/checkbox.css'%}">
 </head>
 <body>
   <section>
